<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JioPlayer</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <!-- MultiAudio -->
    <string name="audioSelection">Audio</string>
    <string name="subtitleSelection">Subtitle</string>
    <string name="audioSubtitle">Subtitle &amp; Audio</string>
    <string name="Cancle">Cancle</string>

    <string name="audioSelectedTag">0</string>
    <string name="audioFormatTag">1</string>
    <string name="audioLanguageTag">2</string>
    <string name="audioIndexTag">3</string>
    <string name="ok">ok</string>

    <!-- quality -->
    <string name="videoQuality">Video Quality</string>
    <string name="checkSettings">Remember my settings</string>
</resources>
