<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cinema_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="186dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/dialogTitleQuality"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/dialogTitleTxtSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/subtitleSelection"
                    android:textColor="@color/cinema_subtitleTextColor"
                    android:textSize="@dimen/audio_subtitle_text_size" />
            </RelativeLayout>

            <ScrollView
                android:id="@+id/scrolllViewRadioGroupSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/subtitleRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/radioGroupBottomMargin"
                        android:orientation="vertical"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="186dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/dialogTitleAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/popupTitleMargin">

                <TextView
                    android:id="@+id/dialogTitleTxtAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/audioSelection"
                    android:textColor="@color/cinema_subtitleTextColor"
                    android:textSize="@dimen/audio_subtitle_text_size" />
            </RelativeLayout>

            <ScrollView
                android:id="@+id/scrolllViewRadioGroupAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/audioRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/radioGroupBottomMargin"
                        android:orientation="vertical"></RadioGroup>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/cinema_unselectedTabColor" />

    <LinearLayout
        android:id="@+id/bottombarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/review_selector"
            android:text="@string/Cancle"
            android:textAllCaps="true"
            android:textColor="@color/cinema_globalWhiteColor"
            android:textSize="@dimen/buttonTextSize" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cinema_unselectedTabColor" />

        <Button
            android:id="@+id/btnOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/review_selector"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/cinema_globalWhiteColor"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>
</LinearLayout>
